@@ -6,7 +6,8 @@ What's New for FreeImage
 + : added
 
 Month day, 2004 - 3.5.3
-* [Nan Feng] fixed a bug in FreeImage_DeleteTag (internal stuff)
++ [Herve Drolon] added support for transparency saving in ICO plugin
+* [Nan Feng] fixed memory leak in FreeImage_DeleteTag (internal stuff)
 
 November 27th, 2004 - 3.5.2
 * [Herve Drolon] fixed a second bug in FreeImage_Clone function
